ccidp-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ccidp-deployment
  namespace: aai-prod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: shibboleth
    spec:
      containers:
      - name: idp
        image: registry.mit.c3.ca/shibboleth-idp:3.3.2
        resources:
          limits:
            cpu: 500m
            memory: 3000Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: credentials
          mountPath: /opt/shibboleth-idp/credentials
        - name: secrets
          mountPath: /opt/shibboleth-idp/ext-conf
        - name: metadata
          mountPath: /opt/shibboleth-idp/metadata
        - name: idp-conf
          mountPath: /opt/idp-conf
        - name: idp-messages
          mountPath: /opt/shibboleth-idp/messages
      volumes:
        - name: credentials
          secret:
            secretName: idp-keys
        - name: secrets
          secret:
            secretName: idp-secrets
        - name: metadata
          configMap:
            name: ccidp-metadata-v4
        - name: idp-conf
          configMap:
            name: ccidp-conf-v9
        - name: idp-messages
          configMap:
            name: ccidp-messages
